sponsor line animation and store

--- a/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
+++ b/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
@@ -9,7 +9,12 @@
           [playClock]="playclock.playclock!"
           [gameClock]="gameclock.gameclock!"
         ></app-scoreboard-display-flat>
+        <app-sponsor-display-flat
+          [tournamentId]="data.match.tournament_id"
+        >
+        </app-sponsor-display-flat>
       </div>
+
     }
   }
 }
