--- a/src/app/components/match-scoreboard-display/match-scoreboard-display.component.less
+++ b/src/app/components/match-scoreboard-display/match-scoreboard-display.component.less
@@ -1,15 +1,10 @@
-//html, body {
-//  margin: 0;
-//  width: 1920px;
-//  height: 900px;
-//}
-
 .main-container-fullhd {
   //border: 5px solid #000000;
+  margin: 0;
 
   display: grid;
   grid-template-columns: 1920px;
-  grid-template-rows: 920px 80px;
+  grid-template-rows: 820px auto auto;
   align-items: stretch;
   justify-items: center;
 
