--- a/src/app/shared/scoreboards/sponsor-display-flat/sponsor-display-flat.component.less
+++ b/src/app/shared/scoreboards/sponsor-display-flat/sponsor-display-flat.component.less
@@ -1,11 +1,13 @@
 .sponsor_line {
+  //border: 1px solid #888888;
+  margin-top: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
   overflow: hidden;
   transform-origin: top;
-  background-color: #6f0b0b;
+  background-color: #ffffff;
   animation: shrinkInOut 60s infinite;
 }
 
@@ -37,6 +39,8 @@
   align-items: center;
   overflow: hidden;
   height: 70px;
+  //height: 100%;
+  //width: 100%;
 }
 
 .sponsor_image:not(:last-child) {
