--- a/src/app/shared/ui/dialogs/add-item-dialog-from-list/add-item-dialog-from-list.component.html
+++ b/src/app/shared/ui/dialogs/add-item-dialog-from-list/add-item-dialog-from-list.component.html
@@ -34,7 +34,7 @@
           let-data
         >
           <div class="template">
-            <div>{{ data.title }}</div>
+            <div>{{ data.title | titlecase }}</div>
           </div>
         </ng-template>
       </div>
