sponsors and sponsorsLine added to display flat admin

--- a/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
+++ b/src/app/components/match-scoreboard-display/match-scoreboard-display.component.html
@@ -12,6 +12,7 @@
           [gameClock]="gameclock.gameclock!"
         ></app-scoreboard-display-flat>
         <app-sponsor-display-flat
+          *ngIf="data.scoreboard_data?.is_sponsor_line"
         ></app-sponsor-display-flat>
       </div>
 
