--- a/src/app/components/match-scoreboard-admin/match-scoreboard-admin.component.html
+++ b/src/app/components/match-scoreboard-admin/match-scoreboard-admin.component.html
@@ -7,6 +7,8 @@
       <!--SCOREBOARD ADMIN-->
       <app-scoreboard-display-flat
         [scoreboardDisplayClass]="'scoreboard'"
+        [tournament]="tournament$ | async"
+        [tournamentSponsor]="mainTournamentSponsor$ | async"
         [gameClock]="gameclock?.gameclock!"
         [data]="data"
         [playClock]="playclock?.playclock!"
