sponsors and sponsorsLine and tournament logo integrated to match admin

--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
@@ -60,4 +60,10 @@
     [disabled]="(isMatchDataLoading$ | async)! || (isMatchDataSubmitting$ | async)!"
   ></app-scoreboard-data-forms>
 
+  <app-main-sponsor-forms
+    [data]="data"
+    [sponsorsFormsVisible$]="sponsorsFormsVisible$"
+    [disabled]="(isMatchDataLoading$ | async)! || (isMatchDataSubmitting$ | async)!"
+  ></app-main-sponsor-forms>
+
 </div>
