--- a/src/app/shared/scoreboards/admin-forms/change-teams-forms/change-teams-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/change-teams-forms/change-teams-forms.component.html
@@ -136,7 +136,7 @@
       >Select Logo Size
       </tui-input-slider>
       <app-admin-submit-button
-        (click)="scaleLogoA('a', data?.scoreboard_data!)"
+        (click)="scaleLogo('a', data?.scoreboard_data!)"
       ></app-admin-submit-button>
     </div>
   </form>
@@ -210,7 +210,7 @@
       >Select Logo Size
       </tui-input-slider>
       <app-admin-submit-button
-        (click)="scaleLogoA('b', data?.scoreboard_data!)"
+        (click)="scaleLogo('b', data?.scoreboard_data!)"
       ></app-admin-submit-button>
     </div>
   </form>
