--- a/src/app/shared/scoreboards/sponsor-display-flat/sponsor-display-flat.component.less
+++ b/src/app/shared/scoreboards/sponsor-display-flat/sponsor-display-flat.component.less
@@ -1,13 +1,13 @@
-.sponsor_line {
+.sponsor_line_animation {
   //border: 1px solid #888888;
   margin-top: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: nowrap;
-  overflow: hidden;
+  //display: flex;
+  //justify-content: center;
+  //align-items: center;
+  //flex-wrap: nowrap;
+  //overflow: hidden;
   transform-origin: top;
-  background-color: #ffffff;
+  //background-color: #ffffff;
   animation: shrinkInOut 60s infinite;
 }
 
@@ -33,20 +33,22 @@
   }
 }
 
-.sponsor_image {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  height: 70px;
-  //height: 100%;
-  //width: 100%;
-}
+//.sponsor_line img {
+//  transform: scale(1);
+//}
 
-.sponsor_image:not(:last-child) {
-  padding-right: 10px;
-}
+//.sponsor_image {
+//  display: flex;
+//  justify-content: center;
+//  align-items: center;
+//  overflow: hidden;
+//  height: 70px;
+//  //height: 100%;
+//  //width: 100%;
+//}
+//
+//.sponsor_image:not(:last-child) {
+//  padding-right: 10px;
+//}
+//
 
-.sponsor_line img {
-  transform: scale(1);
-}
