--- a/src/app/shared/scoreboards/sponsor-display-flat/sponsor-display-flat.component.html
+++ b/src/app/shared/scoreboards/sponsor-display-flat/sponsor-display-flat.component.html
@@ -2,15 +2,18 @@
   <!--  <p style="color: #232323">{{ sponsorLine.sponsor_line.title }}</p>-->
   <!--  <p style="color: #232323">{{ tournamentId }}</p>-->
 
-  <div class="sponsor_line">
-    @for (item of sponsorLine.sponsors; track item.sponsor.id) {
-      <div class="sponsor_image">
-        <img
-          src="{{url}}{{item.sponsor.logo_url}}"
-          height="100px"
-          alt="{{item.sponsor.title | uppercase}} Logo"
-          (error)="onImgError($event)">
-      </div>
-    }
+  <div class="sponsor_line_animation">
+    <app-sponsor-line
+      [sponsorLine]="sponsorLine"
+    ></app-sponsor-line>
+    <!--    @for (item of sponsorLine.sponsors; track item.sponsor.id) {-->
+    <!--      <div class="sponsor_image">-->
+    <!--        <img-->
+    <!--          src="{{url}}{{item.sponsor.logo_url}}"-->
+    <!--          height="100px"-->
+    <!--          alt="{{item.sponsor.title | uppercase}} Logo"-->
+    <!--          (error)="onImgError($event)">-->
+    <!--      </div>-->
+    <!--    }-->
   </div>
 }
