helpers for object titles added, moved pipes to app

--- a/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
+++ b/src/app/shared/scoreboards/scoreboard-display-flat/scoreboard-display-flat.component.less
@@ -171,6 +171,22 @@
     }
   }
 
+  @media screen and (max-width: 400px) {
+    .game-container {
+      grid-template-columns: auto auto;
+    }
+
+    .team_a-name,
+    .team_b-name {
+      width: 140px;
+    }
+
+    .team_a-name span,
+    .team_b-name span {
+      white-space: nowrap;
+    }
+  }
+
 }
 
 .team_a-thisgame,
