--- a/src/app/components/tournament/tournament-add-edit-form/tournament-add-edit-form.component.html
+++ b/src/app/components/tournament/tournament-add-edit-form/tournament-add-edit-form.component.html
@@ -1,15 +1,16 @@
-<button
-  appearance="create"
-  size="m"
-  tuiButton
-  type="button"
-  (click)="showDialog()"
->
-  NEW TOURNAMENT
-</button>
+<!--<button-->
+<!--  appearance="create"-->
+<!--  size="m"-->
+<!--  tuiButton-->
+<!--  type="button"-->
+<!--  (click)="showDialog()"-->
+<!--&gt;-->
+<!--  NEW TOURNAMENT-->
+<!--</button>-->
+
 <ng-template
   let-observer
-  [tuiDialogOptions]="{label: 'Add New tournament', size: 'm'}"
+  [tuiDialogOptions]="{label: action.toUpperCase() + ' TOURNAMENT', size: 'm'}"
   [(tuiDialog)]="open"
 >
   <form
@@ -100,7 +101,7 @@
       ></tui-error>
     </div>
 
-    @if (allSponsors$ | async; as allSponsors) {
+    @if (allSponsors) {
       <app-select-from-list
         [itemsList]="allSponsors"
         [title]="'Main Sponsor'"
@@ -109,7 +110,7 @@
       ></app-select-from-list>
     }
 
-    @if (allSponsorLines$ | async; as allSponsorLines) {
+    @if (allSponsorLines) {
       <app-select-from-list
         [itemsList]="allSponsorLines"
         [title]="'Sponsor Line'"
@@ -119,7 +120,7 @@
 
     <p>
       <app-create-button-in-form
-        [action]="'add'"
+        [action]="action"
         [disabled]="!tournamentForm.valid"
       ></app-create-button-in-form>
       <app-cancel-button-in-form
