edit and delete team integrated

--- a/src/app/components/sport/item-sport/item-sport-with-season/item-sport-with-season.component.html
+++ b/src/app/components/sport/item-sport/item-sport-with-season/item-sport-with-season.component.html
@@ -6,9 +6,9 @@
     <div class="sport content__body">
       <div class="one_col_container">
         <div class="sport content__body__title__flex">
-          <app-body-title
+          <app-body-list-title
             titleMany='tournaments'
-          ></app-body-title>
+          ></app-body-list-title>
 
           <app-create-button-show-dialog
             [action]="'add'"
