add edit refactors, color for team

--- a/src/app/components/team/add-edit-team/add-edit-team.component.html
+++ b/src/app/components/team/add-edit-team/add-edit-team.component.html
@@ -97,6 +97,17 @@
     </div>
 
     <div class="tui-form__row">
+      <label class="tui-text_body-m">Team Color:</label>
+      <input
+        formControlName="teamColor"
+        class="team-color-picker"
+        type="color"
+        style="width: 100%"
+      >
+    </div>
+
+
+    <div class="tui-form__row">
       <tui-input-number
         formControlName="teamEeslId"
       >
