--- a/src/app/components/sport/item-sport/with-teams/with-teams.component.html
+++ b/src/app/components/sport/item-sport/with-teams/with-teams.component.html
@@ -5,12 +5,28 @@
   @if (teamsInSport$ | async; as teams) {
     <div class="tournament content__body">
       <div class="one_col_container">
+        <div class="tournament content__body__title__flex">
+          <app-edit-button
+            [action]="'add'"
+            [item]="'Team'"
+            [dialogId]="'addDialog'"
+          ></app-edit-button>
+
+          <app-add-edit-team
+            [action]="'add'"
+            [dialogId]="'addDialog'"
+            [allSponsors]="allSponsors$ | async"
+            [allSponsorLines]="allSponsorLines$ | async"
+          ></app-add-edit-team>
+        </div>
+
         <app-list-of-teams
           [sportId]="sport.id!"
           [teams]="teams"
           [formatPath]="teamItemHref"
           [titleProperty]="islandTeamTitleProperty"
         ></app-list-of-teams>
+
       </div>
     </div>
   }
