select app into add edit match

--- a/src/app/shared/ui/select/select-from-list/select-from-list.component.html
+++ b/src/app/shared/ui/select/select-from-list/select-from-list.component.html
@@ -25,5 +25,6 @@
       ></tui-avatar>
       <div class="name">{{ data.title }}</div>
     </div>
+    <!--    {{ data[avatarProperty] }}-->
   </ng-template>
 </div>
