--- a/src/app/components/match/add-edit-match/add-edit-match.component.html
+++ b/src/app/components/match/add-edit-match/add-edit-match.component.html
@@ -34,7 +34,8 @@
     </div>
 
     @if (teams) {
-      <div class="tui-form__row" style="display: flex; justify-content: center;">
+      <div class="tui-form__row"
+           style="display: grid; grid-template-columns: auto auto; justify-content: stretch; grid-gap: 10px">
         <app-select-from-list
           [itemsList]="teams"
           [title]="'Home Team'"
