--- a/src/app/shared/ui/headermenu/header-menu.component.html
+++ b/src/app/shared/ui/headermenu/header-menu.component.html
@@ -1,5 +1,17 @@
 <nav>
   <div
+  >
+    <a
+      routerLinkActive="active"
+      href="/persons"
+      tuiLink
+      ariaCurrentWhenActive="page"
+    >
+      PERSONS
+    </a>
+  </div>
+
+  <div
     tuiDropdownHover
     [tuiDropdown]="sponsors"
   >
