--- a/src/app/components/sport/item-sport/with-players/with-players.component.html
+++ b/src/app/components/sport/item-sport/with-players/with-players.component.html
@@ -34,7 +34,7 @@
                       size="l"
                       text="'Player Photo'"
                       class="tui-space_top-1"
-                      [rounded]="true"
+                      [rounded]="false"
                       [avatarUrl]="backendUrl + p.person?.person_photo_url || null"
                     ></tui-avatar>
                   </div>
