--- a/src/app/components/player/add-edit-player/add-edit-player.component.html
+++ b/src/app/components/player/add-edit-player/add-edit-player.component.html
@@ -7,14 +7,14 @@
     [formGroup]="playerForm"
     (ngSubmit)="onSubmit(); observer.complete()"
   >
-    <app-select-from-list
+    <app-select-from-person
       [itemsList]="availablePersons"
       [title]="'Person'"
       [formField]="playerForm.controls['person']"
       [nullable]="false"
       [avatarProperty]="'person_photo_url'"
       [stringifyFn]="stringifyNameSurname"
-    ></app-select-from-list>
+    ></app-select-from-person>
     <div class="tui-form__row">
       <p>
         <app-create-button-in-form
