person and player add edit form and item

--- a/src/app/components/person/item-person/item-person.component.html
+++ b/src/app/components/person/item-person/item-person.component.html
@@ -15,9 +15,9 @@
             (error)="onImgError($event)"
           ></p>
       </div>
-      <div class="tournament content__body">
+      <div class="person content__body">
         <div class="one_col_container">
-          <div class="tournament content__body__title__flex">
+          <div class="person content__body__title__flex">
             <app-edit-button
               [action]="'edit'"
               [item]="'Person'"
