--- a/src/app/shared/ui/list-of-items-island/list-of-items-island.component.html
+++ b/src/app/shared/ui/list-of-items-island/list-of-items-island.component.html
@@ -12,7 +12,17 @@
       >
         <div class="tui-island__content">
           <figure class="tui-island__figure">
-            <div class="some-figure"></div>
+            <div class="some-figure">
+              @if (avatarUrl != 'none') {
+                <tui-avatar
+                  size="l"
+                  text="{{item[titleProperty] || item[titlePropertyFirst] || item[titlePropertySecond] || 'image'}}"
+                  class="tui-space_top-1"
+                  [rounded]="false"
+                  [avatarUrl]="backendUrl + item[avatarUrl] || null"
+                ></tui-avatar>
+              }
+            </div>
           </figure>
           <div>
             <h3 class="tui-island__title">
