--- a/src/app/components/person/all-persons/all-persons.component.html
+++ b/src/app/components/person/all-persons/all-persons.component.html
@@ -24,6 +24,7 @@
             [formatPath]="personItemHref"
             [titlePropertyFirst]="first_name"
             [titlePropertySecond]="second_name"
+            [avatarUrl]="avatarUrl"
           ></app-list-of-items-island>
         } @else {
           <tui-loader></tui-loader>
