--- a/src/app/components/player/item-player/item-player.component.html
+++ b/src/app/components/player/item-player/item-player.component.html
@@ -1,1 +1,68 @@
-<p>item-player works!</p>
+@if (currentPlayerWithPerson$ | async; as player) {
+  <div class="player container">
+    <div class="player content">
+      <div class="player content__title">
+        <h3 class="tui-text_h3">
+          {{ player.person?.first_name | uppercase }} {{ player.person?.second_name | uppercase }}
+        </h3>
+
+        <p>
+          <img
+            src="{{url}}{{player.person?.person_photo_url}}"
+            width="100px"
+            height="100px"
+            alt="{{player.person?.first_name | uppercase}} {{player.person?.second_name | uppercase }} Photo"
+            (error)="onImgError($event)"
+          ></p>
+      </div>
+      <div class="player content__body">
+        <div class="one_col_container">
+          <div class="player content__body__title__flex">
+            <app-edit-button
+              [action]="'edit'"
+              [item]="'Player'"
+              [dialogId]="'editPlayerDialog'"
+            ></app-edit-button>
+
+            <app-add-edit-player
+              [action]="'edit'"
+              [dialogId]="'editPlayerDialog'"
+              [playerWithPersonToUpdate]="player"
+              [allSportPlayersWithPerson]="allSportPlayersWithPerson$ | async"
+              [allPersons]="allPersons$ | async"
+              [sportId]="player.player.sport_id!"
+            ></app-add-edit-player>
+
+            @if (player.person) {
+
+              <app-edit-button
+                [action]="'edit'"
+                [item]="'Person'"
+                [dialogId]="'editPersonDialog'"
+              ></app-edit-button>
+
+              <app-add-edit-person
+                [action]="'edit'"
+                [dialogId]="'editPersonDialog'"
+                [personToUpdate]="player.person"
+              ></app-add-edit-person>
+            }
+
+
+
+            <app-delete-button
+              [item]="buttonTitle"
+              [dialogId]="'deleteDialog'"
+            ></app-delete-button>
+            <app-delete-dialog
+              [item]="buttonTitle"
+              (delete)="onDelete()"
+              [dialogId]="'deleteDialog'"
+            ></app-delete-dialog>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+}
