--- a/src/app/components/sport/item-sport/with-players/with-players.component.html
+++ b/src/app/components/sport/item-sport/with-players/with-players.component.html
@@ -20,7 +20,7 @@
               [action]="'add'"
               [dialogId]="'addDialog'"
               [allPersons]="persons"
-              [allSportPlayers]="players"
+              [allSportPlayersWithPerson]="players"
               [sportId]="sport.id!"
             ></app-add-edit-player>
           }
@@ -43,7 +43,7 @@
                   <div class="some-figure">
                     <tui-avatar
                       size="l"
-                      text="'Player Photo'"
+                      text="{{p.person?.first_name}}"
                       class="tui-space_top-1"
                       [rounded]="false"
                       [avatarUrl]="backendUrl + p.person?.person_photo_url || null"
