person image uploads and resized change person model for images

--- a/src/app/components/person/all-persons/all-persons.component.html
+++ b/src/app/components/person/all-persons/all-persons.component.html
@@ -24,7 +24,7 @@
             [formatPath]="personItemHref"
             [titlePropertyFirst]="first_name"
             [titlePropertySecond]="second_name"
-            [avatarUrl]="avatarUrl"
+            [avatarUrl]="avatarIconUrl"
           ></app-list-of-items-island>
         } @else {
           <tui-loader></tui-loader>
