--- a/src/app/components/person/item-person/item-person.component.html
+++ b/src/app/components/person/item-person/item-person.component.html
@@ -8,7 +8,7 @@
 
         <p>
           <img
-            src="{{url}}{{person.person_photo_url}}"
+            src="{{url}}{{person.person_photo_web_url}}"
             width="100px"
             height="100px"
             alt="{{person.first_name | uppercase}} {{person.second_name | uppercase }} Photo"
