person and player refactored

--- a/src/app/components/player/item-player/item-player.component.html
+++ b/src/app/components/player/item-player/item-player.component.html
@@ -8,7 +8,7 @@
 
         <p>
           <img
-            src="{{url}}{{player.person?.person_photo_url}}"
+            src="{{url}}{{player.person?.person_photo_web_url}}"
             width="100px"
             height="100px"
             alt="{{player.person?.first_name | uppercase}} {{player.person?.second_name | uppercase }} Photo"
