--- a/src/app/components/sport/item-sport/with-players/with-players.component.html
+++ b/src/app/components/sport/item-sport/with-players/with-players.component.html
@@ -46,7 +46,7 @@
                       text="{{p.person?.first_name}}"
                       class="tui-space_top-1"
                       [rounded]="false"
-                      [avatarUrl]="backendUrl + p.person?.person_photo_url || null"
+                      [avatarUrl]="backendUrl + p.person?.person_photo_icon_url || null"
                     ></tui-avatar>
                   </div>
                 </figure>
