title case for select

--- a/src/app/components/player/add-edit-player/add-edit-player.component.html
+++ b/src/app/components/player/add-edit-player/add-edit-player.component.html
@@ -13,7 +13,7 @@
         [title]="'Person'"
         [formField]="playerForm.controls['person']"
         [nullable]="false"
-        [avatarProperty]="'person_photo_url'"
+        [avatarProperty]="null"
         [stringifyFn]="stringifyNameSurname"
       ></app-select-from-person>
     } @else {
