--- a/src/app/shared/ui/list-of-items-island/list-of-items-island.component.html
+++ b/src/app/shared/ui/list-of-items-island/list-of-items-island.component.html
@@ -27,10 +27,11 @@
           <div>
             <h3 class="tui-island__title">
               @if (titleProperty != 'none') {
-                {{ item[titleProperty] }}
+                {{ getTitleCase(item, titleProperty) | titlecase }}
               } @else if (item[titlePropertyFirst] != 'none' &&
               item[titlePropertySecond] != 'none') {
-                {{ item[titlePropertyFirst] }} {{ item[titlePropertySecond] }}
+                {{ getTitleCase(item, titlePropertyFirst) | titlecase }}
+                {{ getTitleCase(item, titlePropertySecond) | titlecase }}
               } @else {
                 No Title
               }
